testsuite/tests/typecheck/should_fail/T18723b.stderr

T18723b.hs:7:2: error: [GHC-94803]
    • A 65-tuple is too large for GHC
        (max size is 64)
        Workaround: use nested tuples or define a data type
    • In the first argument of ‘Proxy’, namely
        ‘'(Int,
           Int,
           Int,
           Int,
           Int,
           Int,
           Int,
           Int,
           Int,
           Int,
           Int,
           Int,
           Int,
           Int,
           Int,
           Int,
           Int,
           Int,
           Int,
           Int,
           Int,
           Int,
           Int,
           Int,
           Int,
           Int,
           Int,
           Int,
           Int,
           Int,
           Int,
           Int,
           Int,
           Int,
           Int,
           Int,
           Int,
           Int,
           Int,
           Int,
           Int,
           Int,
           Int,
           Int,
           Int,
           Int,
           Int,
           Int,
           Int,
           Int,
           Int,
           Int,
           Int,
           Int,
           Int,
           Int,
           Int,
           Int,
           Int,
           Int,
           Int,
           Int,
           Int,
           Int,
           Int)’
      In the type ‘(Proxy '(Int,
                            Int,
                            Int,
                            Int,
                            Int,
                            Int,
                            Int,
                            Int,
                            Int,
                            Int,
                            Int,
                            Int,
                            Int,
                            Int,
                            Int,
                            Int,
                            Int,
                            Int,
                            Int,
                            Int,
                            Int,
                            Int,
                            Int,
                            Int,
                            Int,
                            Int,
                            Int,
                            Int,
                            Int,
                            Int,
                            Int,
                            Int,
                            Int,
                            Int,
                            Int,
                            Int,
                            Int,
                            Int,
                            Int,
                            Int,
                            Int,
                            Int,
                            Int,
                            Int,
                            Int,
                            Int,
                            Int,
                            Int,
                            Int,
                            Int,
                            Int,
                            Int,
                            Int,
                            Int,
                            Int,
                            Int,
                            Int,
                            Int,
                            Int,
                            Int,
                            Int,
                            Int,
                            Int,
                            Int,
                            Int))’
      In the definition of data constructor ‘MkT2’
